objects/adapps__OptimizerPlus_Lightning_Sales_Con_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Lightning_SalesConsole__c</fullName>
        <label>Path</label>
        <referenceTo>adapps__OptimizerPlus_Lightning_Sales_Con__c</referenceTo>
        <relationshipLabel>Lightning Sales Console Items</relationshipLabel>
        <relationshipName>Lightning_Sales_Console_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Modification__c</fullName>
        <label>Modification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url_Profile__c</fullName>
        <label>Url Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__Url_User__c</fullName>
        <label>Url User</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lightning Sales Console Item</label>
    <nameField>
        <label>Lightning Sales Console Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Sales Console Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>